--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "r3f-perf": "^7.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "three": "^0.160.1"
+    "three": "^0.160.1",
+    "vite-plugin-glsl": "^1.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
