portal surface added

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "three": "^0.160.1",
-    "vite-plugin-glsl": "^1.2.1"
+    "vite-plugin-glsl": "^1.2.1",
+    "wouter": "^3.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
